--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <meta property="og:title" content="Boucherie Hidaya - Boucherie Halal à Cugnaux" />
     <meta property="og:description" content="Votre boucherie halal de confiance à Cugnaux. Produits frais, qualité garantie, service chaleureux." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/favicon.ico" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
